--- a/receiver/src/main/res/layout/activity_saved_users.xml
+++ b/receiver/src/main/res/layout/activity_saved_users.xml
@@ -4,16 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReceiverMainActivity">
+    android:background="#fff"
+    android:id="@+id/parenView"
+    android:animateLayoutChanges="true">
 
-    <Button
-        android:id="@+id/bt_saved_users"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Show Sored Users"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSavedUsers"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
