--- a/middleman/src/main/res/layout/activity_main.xml
+++ b/middleman/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="this app do nothing but transforming data between emitter App and receiver App"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
